k8s-network-policies/block-egress.yaml
# blocks all outbound traffic
# from the pods in the current namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress: []
