k8s-network-policies/only-egress-to-kubeapiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-allow-egress-to-apiserver
  namespace: default
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
         cidr: 172.20.0.1/32
    ports:
    - port: 2040
      protocol: TCP
